# ic-poc

./: README.md
netclient/: .editorconfig  netclient.sln
netclient/EdjCase.ICP/Agent/: API.xml
netclient/EdjCase.ICP/Agent/Agents/: HttpAgent.cs
netclient/EdjCase.ICP/Agent/Models/: SignedContent.cs
netclient/EdjCase.ICP/Agent/Responses/: CallRejectedResponse.cs
netclient/netclient.console/: CborHelper.cs  Program.cs  netclient.console.csproj
netclient/netclient.console/Model/: Asset.cs
the_sample/: Cargo.toml  README.md  dfx.json
the_sample/src/the_sample_backend/: Cargo.toml  the_sample_backend.did
the_sample/src/the_sample_backend/src/: lib.rs  types.rs
