[package]
name = "the_sample_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
bincode = "1.3.3"
candid = "0.10"
hex = "0.4.3"
ic_principal = "0.1.1"
ic-cdk = "0.12"
ic-cdk-macros = "0.8.4"
ic-stable-structures = "0.6.2"
num-bigint = "0.4.4"
num-traits = "0.2.18"
serde = "1.0.196"